# agent-simulator

./: .gitignore  README.md  package-lock.json  package.json  server.js
examples/expo-demo/: App.tsx  index.ts  metro.config.js  package.json
mcp/: server.mjs
runtime/: inspector-bridge.js  metro-plugin.js
scripts/: demo.mjs
sidecars/simstream/: Package.swift
sidecars/simstream/Sources/SimBridgeC/: SimBridgeC.m
sidecars/simstream/Sources/SimBridgeC/include/: SimBridgeC.h
sidecars/simstream/Sources/simstream/: BytePacking.swift  DisplayEncoder.swift  WebSocketServer.swift  main.swift
sim-server/: Cargo.toml  build.rs
sim-server/src/: capture.rs  input.rs  main.rs  mjpeg.rs
web/: index.html
web-app/: index.html  package.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts
web-app/src/: App.tsx  globals.css  main.tsx
web-app/src/components/: simulator-view.tsx  theme-provider.tsx  theme-toggle.tsx
web-app/src/components/inspector/: connection-help.tsx  layer-tree.tsx  property-panel.tsx
web-app/src/components/layout/: quality-menu.tsx  sidebar-header.tsx  toolbar.tsx
web-app/src/components/ui/: button.tsx  dropdown-menu.tsx  switch.tsx  tabs.tsx  tooltip.tsx
web-app/src/hooks/: use-ax-tree.ts  use-sim-config.ts  use-sim-socket.ts  use-source-file.ts
web-app/src/lib/: ax-tree.ts  fiber-tree.ts  simstream-protocol.test.ts  simstream-protocol.ts  types.ts  utils.ts  ws.ts
