[package]
name = "sim-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sim-server"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
clap = { version = "4", features = ["derive"] }
image = "0.25"
jpeg-encoder = "0.6"
core-graphics = "0.24"
core-foundation = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
anyhow = "1"
bytes = "1"
