[package]
name = "sim-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sim-server"
path = "src/main.rs"

[dependencies]
# sim-server is now a thin shim over `axe stream-video`: it pipes JPEG
# frames from axe stdout into an MJPEG broadcast, shells out to `axe` for
# touch/swipe/type, and exposes `/api/tree` for the UI. No PNG/JPEG
# encoding, no CoreGraphics capture, no Simulator.app window hunting.
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
tokio-stream = { version = "0.1", features = ["sync"] }
anyhow = "1"
bytes = "1"
