[package]
name = "sim-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sim-server"
path = "src/main.rs"

[dependencies]
# sim-server pipes simulator frames into an MJPEG broadcast, shells out to
# `axe` for touch/swipe/type, and exposes `/api/tree`.
#
# Two capture modes exist:
#   - BGRA (default)  — real framebuffer stream via axe stream-video
#     --format bgra, encoded to JPEG here with jpeg-encoder.
#   - MJPEG fallback  — if BGRA init fails, axe stream-video --format raw.
#
# jpeg-encoder is a small pure-Rust JPEG encoder; it can consume BGRA
# input directly so we skip any RGB-conversion step.
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
clap = { version = "4", features = ["derive"] }
jpeg-encoder = "0.6"
# PNG decoder used only by the BGRA keepalive path (decodes `axe screenshot`
# output so we can transcode it to JPEG for the MJPEG stream).
png = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
tokio-stream = { version = "0.1", features = ["sync"] }
anyhow = "1"
bytes = "1"
